[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Box/limit_line.png" type="Texture" id=1]
[ext_resource path="res://Game/Box/ground.png" type="Texture" id=2]
[ext_resource path="res://Game/Box/background.png" type="Texture" id=3]
[ext_resource path="res://Game/Box/Box.gd" type="Script" id=4]
[ext_resource path="res://Game/Box/alarm.mp3" type="AudioStream" id=5]
[ext_resource path="res://Game/Box/alarm_long.mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "in_limit"
length = 3.1
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.5, 1.4, 2.2, 2.6, 3 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ 1.0, 0.8 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3000, 500 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 500, 3000 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3000, 500 )

[node name="Box" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/in_limit = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Reverb"

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -886 )
texture = ExtResource( 3 )

[node name="Limit" type="Area2D" parent="."]
position = Vector2( 0, -980 )
monitorable = false

[node name="LimitLine" type="Sprite" parent="Limit"]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limit"]
position = Vector2( 0, -500 )
shape = SubResource( 2 )

[node name="WallLeft" type="CollisionShape2D" parent="."]
position = Vector2( -860, 0 )
shape = SubResource( 1 )

[node name="WallRight" type="CollisionShape2D" parent="."]
position = Vector2( 860, 0 )
shape = SubResource( 1 )

[node name="Ground" type="CollisionShape2D" parent="."]
position = Vector2( 0, 500 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( -3, -209 )
texture = ExtResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Limit" to="." method="_on_Limit_body_entered"]
[connection signal="body_exited" from="Limit" to="." method="_on_Limit_body_exited"]
